fix(build): resolve lombok annotation processor and align RAG context interfaces - 306 passing tests